--- a/movie/src/main/resources/application.properties
+++ b/movie/src/main/resources/application.properties
@@ -1,1 +1,41 @@
 spring.application.name=movie
+
+server.port=9004
+server.address=0.0.0.0
+# 스프링 기본 에러 페이지 사용 설정
+server.error.whitelabel.enabled=true
+# 서버 인코딩 설정
+server.servlet.encoding.charset=UTF-8
+# 프록시/로드밸런서 사용 시 헤더 전달 전략 설정
+server.forward-headers-strategy=native
+
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+spring.datasource.url=${ORACLE_DB_URL}
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.username=${ORACLE_DB_USER}
+spring.datasource.password=${ORACLE_DB_PASSWORD}
+
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+
+mybatis.mapper-locations=classpath:/mappers/*.xml
+mybatis.type-aliases-package=com.e.model.vo.*
+
+spring.datasource.hikari.minimumIdle=5
+spring.datasource.hikari.maximumPoolSize=10
+spring.datasource.hikari.connectionTimeout=10000
+spring.datasource.hikari.idleTimeout=10000
+spring.datasource.hikari.max-lifetime=580000
+spring.datasource.hikari.autoCommit=true
+
+spring.datasource.hikari.data-source-properties.cachePrepStmts=true
+spring.datasource.hikari.data-source-properties.prepStmtCacheSize=200
+spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=2048
+spring.datasource.hikari.data-source-properties.useServerPrepStmts=true
+
+
+
