좌석 예약 시 DB에 값 들어오게 만듬

--- a/movie/src/main/resources/application.properties
+++ b/movie/src/main/resources/application.properties
@@ -2,12 +2,10 @@ spring.application.name=movie
 
 server.port=9004
 server.address=0.0.0.0
-# 스프링 기본 에러 페이지 사용 설정
 server.error.whitelabel.enabled=true
-# 서버 인코딩 설정
 server.servlet.encoding.charset=UTF-8
-# 프록시/로드밸런서 사용 시 헤더 전달 전략 설정
 server.forward-headers-strategy=native
+server.servlet.session.timeout=20h
 
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
