--- a/movie/src/main/resources/application.properties
+++ b/movie/src/main/resources/application.properties
@@ -10,6 +10,9 @@ server.servlet.session.timeout=20h
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
+spring.ai.ollama.chat.model=exaone3.5
+spring.ai.ollama.base-url=http://localhost:11434
+
 spring.datasource.url=${ORACLE_DB_URL}
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.username=${ORACLE_DB_USER}
