이제 다 완성함. 나머지는 maven으로 빌드하고 war 파일 배포하면 끝

--- a/movie/src/main/resources/application.properties
+++ b/movie/src/main/resources/application.properties
@@ -6,11 +6,12 @@ server.error.whitelabel.enabled=true
 server.servlet.encoding.charset=UTF-8
 server.forward-headers-strategy=native
 server.servlet.session.timeout=20h
+server.servlet.context-path=/movie
 
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
-spring.ai.ollama.chat.model=exaone3.5
+spring.ai.ollama.chat.model=exaone3.5:2.4b
 spring.ai.ollama.base-url=http://localhost:11434
 
 spring.datasource.url=${ORACLE_DB_URL}
