--- a/movie/pom.xml
+++ b/movie/pom.xml
@@ -125,6 +125,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>movie</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
